fixed buttons alignment, working on header.

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,23 @@
 }
 
 
+.bi{
+    max-height: 2em;
+    max-width: 2em;
+    margin: auto .5em auto .5em;
+    font-size: 1.7em;
+    color: hsl(0, 0%, 90%);
+}
+
+.bi-artstation{
+    /* Apply styles to both <i> and <svg> elements */
+    fill: hsl(0, 0%, 90%); /* This will apply to SVGs */
+    width: 25px;
+    height: 50px;
+    padding-top: .4em;
+}
+
+
 body{
     text-align: center;
     background-color: red;
@@ -25,28 +42,30 @@ body{
 
 .header{
     background-color: var(--color1);
-    padding: 0px;
-    margin: 0px;
+    padding: 10em auto 1em auto;
+    margin: auto auto 1em auto;
+    height: 40em;
+}
 
+h2{
+    font-size: 1.5em;
+}
+
+p{
+    font-size: 1em;
 }
 
 .profilepicture{
     border-radius: 100%;
     height: 15em;
-    margin-bottom: 2em;
+    margin: 3em auto 3em auto;
 }
 
 .presentationtext{
-    margin: 0px auto 0px auto;
+    margin-bottom: 6em;
 }
 
-.projects{
-    display: inline-block;
-}
 
-.bi, svg{
-    height: 50px;
-    width: 50px;
-    viewBox=2 1 16 16;
-    fill=currentColor;
+.socialmediaicons{
+    margin: 1em auto em auto;
 }
